src/test/testData/kubernetes/KUBE001/pod.yaml.denied
apiVersion: v1
kind: Pod
metadata:
  name: static-web
  labels:
    role: myrole
spec:
  securityContext:
    runAsNonRoot: <error descr="Container runs as root or can gain root privileges.">false</error>
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
      securityContext:
        runAsGroup: 1000